<resources>
    <string name="app_name">USSD4ETECSA</string>
    <string name="accessibility_service_description">Habilitar <b>USSD4ETECSA</b> para poder obtener la infomación de los dialogos de saldo y asi poder mantener la Base de datos de la aplicación actulizada.Cuando habilites esta opción podras obtener la vizualización de tus saldos en la barra de notificación y siempre saber la informacion de tu saldo, asi como los servicios contratados.
    </string>
    <string name="ayuda_app"> Activar el servicio de accesibilidad en - [AJUSTES> ACCESIBILIDAD> USSD4ETECSA] -  el cual permite que se puedan mostrar los saldos en la aplicación.</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Contratar</string>
    <string name="update">Actualizar</string>
    <string name="config">Configuración</string>
    <string name="recargar">Recargar saldo</string>
    <string name="transferir">Transferir saldo</string>
    <string name="inicio">Inicio</string>
    <string name="about">Acerca de</string>
    <string name="otros">Otros</string>

    <string name="descripcion_notificacion">Activar acceso directo de los saldos en la barra notificación. </string>
    <string name="descripcion_accesibilidad">Presione para habilitar el servicio de accesibilidad, el cual permite que se puedan mostrar los saldos en la aplicación. </string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configurar Widget de la aplicación</string>
    <string name="add_widget">Add widget</string>
    <string name="config_Automata_title">Activar verificación automática</string>
    <string name="config_Automata_text">Permite verificar automáticamente los saldos 5 segundos después de realizar una llamada o enviar un sms. </string>
    <string name="config_chbox_call">Actualizar después de realizar una llamada. </string>
    <string name="config_chbox_sms">Actualizar después de enviar un sms. </string>

    <string name="alert_dialog_hint">Introducir código de recarga..</string>
    <string name="alert_dialog_title">Recargar saldo</string>
    <string name="alert_dialog_mensaje">Introducir código de recarga.</string>
    <string name="alert_Cancel">Cancelar</string>
    <string name="alert_Ok">Recargar</string>

    <string name="about_us_version">Versión</string>
    <string name="about_us_reporte">Reporte de errores</string>
    <string name="about_us_github_dir">https://github.com/Daym3l/USSD4ETECSA</string>
    <string name="about_us_contactenos">Contactenos</string>
    <string name="about_us_mail">daym3l@nauta.cu</string>
    <string name="about_us_descrip">Agradecer a todas las personas que de una forma u otra han contribuido con el desarrollo de esta aplicación.</string>
    <string name="about_us_allright">Todos los derechos reservados</string>
    <string name="about_us_copy">Copyright © 2017 TBmos.</string>

    <string name="Principal_red">Datos de la red</string>
    <string name="Principal_proveedor">Proveedor de la Red:</string>
    <string name="Principal_nombre">Nombre de la Red:</string>
    <string name="Principal_tipo">Tipo de Red:</string>
    <string name="Principal_seleccionar">Debe seleccionar una opción.</string>
    <string name="Principal_sms">Contratar servicio de Mensajes</string>
    <string name="Principal_datos">Contratar servicio de Datos</string>
    <string name="Principal_voz">Contratar servicio de Voz</string>
    <string name="no_conection">sin conexión</string>
    <string name="cubacel">Cubacel</string>

    <string name="Saldo">Su saldo actual es de:</string>
    <string name="Saldo_vence">Vence el:</string>

    <string name="servicio_dispone">Usted dispone de:</string>
    <string name="servicio_vence">Por:</string>
    <string name="no_service">Sin servicio</string>

    <string name="hint_trans_contacto">Número de telf. a transferir</string>
    <string name="hint_trans_money">1 CUC</string>
    <string name="hint_trans_pass">Contraseña</string>
    <string name="hint_trans_pass_val">1234</string>



    <string name="title_activity_principal__navigation">USSD4ETECSA</string>

</resources>
